# exr-converter

./: .gitignore  LICENSE  Makefile  README.md  installer.iss  main.py  pyproject.toml  resources.qrc
.github/workflows/: ci.yml  release-exr_converter.yml  release-slate_maker.yml  release.yml
apps/exr_converter/: Makefile  README.md  installer.iss  main.py  pyproject.toml  resources.qrc
apps/exr_converter/public/: icon.icns  style.qss
apps/exr_converter/src/: cli.py  constants.py  convert.py  exr_io.py  framerange.py  ocio_utils.py  pool.py  rc_resources.py  sequence.py  slate.py  slate_widgets.py  style.py  video.py  widgets.py  window.py  worker.py
apps/slate_maker/: .gitignore  Makefile  README.md  installer.iss  main.py  pyproject.toml  style.qss
apps/slate_maker/public/: icon.icns
apps/slate_maker/src/: constants.py  rc_resources.py  widgets.py  worker.py
apps/slate_maker/templates/: slate.html  tailwind.config.js  tailwind.css
scripts/: airplane_motion.py  bump_app_version.py
src/: burnin.py  cache_prefs.py  cli.py  constants.py  convert.py  exr_io.py  exr_prefetch.py  frame_cache.py  ocio_utils.py  pool.py  rc_resources.py  sequence.py  slate.py  slate_model.py  slate_widgets.py  timeline_slider.py  video.py  watermark.py  widgets.py  window.py  worker.py
src/core/: constants.py  convert.py  exr_io.py  ocio_utils.py  sequence.py  video.py
src/gui/: slate_widgets.py  token_line_edit.py  widgets.py  window.py
src/render/: tokens.py  watermark.py
src/services/: exr_prefetch.py  frame_cache.py  presets.py  slate_model.py  worker.py
templates/: burnin.html  slate.html
tests/: conftest.py  test_burnin.py  test_cache_prefs.py  test_convert_helpers.py  test_frame_cache.py  test_framerange.py  test_integration_conversions.py  test_ocio_utils.py  test_slate_model.py  test_tokens.py  test_video_deinterlace.py  test_watermark.py
tests/fixtures/: README.md  manifest.json
tests/support/: integration.py
