[project]
name = "exr_converter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Derek Rein"},
]
dependencies = [
    "av>=17.0.0",
    "numpy>=2.2.6",
    "oiio-python>=3.0.10.0.1",
    "opencolorio>=2.5.1",
    "pyinstaller>=6.19.0",
    "pyseq>=0.9.1",
    "PySide6>=6.9.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "ruff>=0.11.0",
]

[tool.pdm]
distribution = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
