[project]
name = "exr_converter"
version = "0.1.1"
description = "A cross-platform GUI tool for converting and transcoding EXR and video files."
authors = [
    {name = "Derek Rein"},
]
dependencies = [
    "av>=17.0.0",
    "oiio-python>=3.0.10.0.1",
    "pyinstaller>=6.19.0",
    "PySide6>=6.8.3",
    "numpy>=2.2.6",
    "opencolorio>=2.5.1",
    "fileseq>=3.1.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "ruff>=0.11.0",
]

[tool.pdm]
distribution = false

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["src/rc_resources.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
