[project]
name = "slate-maker"
version = "0.1.5"
description = "VFX Slate Maker — generate cinematic EXR slate sequences"
authors = [
    {name = "Derek Rein"},
]
dependencies = [
    "numpy>=2.2.0",
    "oiio-python>=3.0.10.0.1",
    "opencolorio>=2.5.0",
    "nuitka[onefile]>=4.0",
    "PySide6>=6.8.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
slate-maker = "main:main"

[dependency-groups]
dev = ["ruff>=0.11.0"]

[tool.pdm]
distribution = false

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["src/rc_resources.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
